--- a/display-flex/css/style.css
+++ b/display-flex/css/style.css
@@ -6,8 +6,10 @@
  }
 
 body{
-    background-color: #fff;
+    /* background-color: #fff; */
+    background-color: #bbb;
  }
+ 
 /* estilo do cabeçalho */
 header{
     display: flex;
@@ -17,19 +19,37 @@ header{
     color: #fff;
     padding: 15px 50px;
  }
+
 /* estilo do título do cabeçalho */
 header h1{
     font-size: 24px;
+    color: #fff;
+}
+
+header img{
+  width: 80px;
+}
+
+.header-menu{
+  display: flex;
+  gap: 20px;
 }
 
 /* estilo  do menu de seleção*/
 .header-menu select{
     padding: 10px;
     border: none;
-    background-color: #555;
+    background-color: #bbb;
     color: #fff;
     cursor: pointer; 
 }
+
+.header-menu select option:first-child{
+  color: #888;
+  font-weight: bold;
+}
+
+
 /* estilo do banner principal */
     .banner{
         height: 400px;
@@ -42,6 +62,36 @@ header h1{
         color: #fff;
         cursor: pointer;
     }
+    /* .banner{
+        position:relative;
+        width: 100%;
+        height: 400px;
+        overflow: hidden;
+    }
+    .slides{
+      display: flex;
+      animation: slide 10s infinite;
+    }
+    .slides img{
+      width: 100%;
+      height: 400px;
+      object-fit: cover;
+    }
+
+    @keyframes slide{
+      0%{
+        transform: translateX(0);
+      }
+      33%{
+        transform: translateX(-100%);
+      }
+      66%{
+        transform: translateX(-200%);
+      }
+      100%{
+        transform: translateX(0)
+      }
+    } */
 
 .catalong{
     display: grid;
@@ -51,7 +101,7 @@ header h1{
 }
 
 .catalong-card{
-    background-color: #fff;
+    background-color: #555;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0,0.1);
@@ -71,24 +121,26 @@ header h1{
     font-size: 20px;
     margin: 15px 0;
   }
+
   .catalong-card p {
-    color: #555;
+    color: #fff;
     margin-bottom: 15px;
   }
+
   .catalong-card button:hover {
     background-color: black;
   }
   .catalong-card button{
     padding: 10px;
-    background-color: orangered;
-    color: #fff;
+    background-color: #fff;
+    color: #000;
     border: none;
     border-radius:5px;
     cursor: pointer;
     transition: backgroud-color 0.3s ease;
   }
   .catalong-card button:hover{
-    background-color: blue;
+    background-color: orangered;
   }
 
   .contact-form h2 {
@@ -96,7 +148,7 @@ header h1{
     margin-bottom: 20px;
   }
   .contact-form{
-    background-color: #fff;
+    background-color: #bbb;
     padding: 40px 50px;
     margin-top: 40px;
   }
@@ -107,9 +159,55 @@ header h1{
   }
   .contact-form input,
   .contact-form textarea{
-    width: 100%;
+    width: 50%;
     padding: 10px;
     margin-bottom: 20px;
-    border: 1px solid #fff;
+    border: 1px solid #555;
     border-radius: 5px;
+  }
+  .contact-form button{
+    padding: 15px 30px;
+    background-color: #555;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
+    transition: background-color 0.3s ease;
+  }
+  .contact-form button:hover{
+    background-color: #ff6200;
+  }
+  /* estilo footer */
+  footer{
+    display: grid;
+    grid-auto-columns: repeat(3, 1fr);
+    background-color: #333;
+    color: #fff;
+    padding: 30px 50px;
+    justify-items: center;
+  }
+  footer ul{
+    list-style: none;
+  }
+  footer ul li a{color: #bbb;
+    text-decoration: none;
+    font-size: 16px;
+    transition: color 0.3s ease;
+  }
+  footer ul li a:hover{
+    color: #ff6200;
+  }
+    
+  footer p{
+    grid-column: span 3;
+    text-align: center;
+    margin-top: 20px;
+    font-size: 14px;
+    color: #bbb;
+  }
+  /* ESTILO RESPONSIVO */
+  @media (max-width: 768px) {
+    .catalog{
+      grid-template-columns: repeat(2,1);
+    } 
   }
